# Cerializer

./: .gitignore  README 2.md  README.md  avro_exaple.py  benchmark.py  build.py  demo.sh  demo_client.sh  demo_server.sh  dev_requirements 2.txt  dev_requirements.txt  driver.pyx  fastavro_example.py  mypy.ini  prepare 2.pyx  prepare.c  prepare.pxd  prepare.pyx  projekt.c  projekt.html  projekt.pyx  pyproject.toml  read 2.pxd  read.pxd  read.pyx  rendered.c  rendered.html  requirements 2.txt  requirements.txt  result  schema_parser.py  setup.py  template_handler.py  user.avro  write.pxd  write.pyx
.github/workflows/: main 2.yml  main.yml
cerializer/: cerializer.py  cerializer_daemon.py  cerializer_handler.py  code_generator.py  compiler.py  constants.py  prepare.c  prepare.pyx  quantlane_cerializer.py  quantlane_utils.py  read.pyx  schema_handler.py  schema_parser.py  schemata.py  schemata_handler.py  template_handler.py  utils.py  write.pxd
cerializer/cerializer_base/: BBGStockInfo_2.pyx  array_schema_1.pyx  bytes_decimal_schema_1.pyx  enum_schema_1.pyx  fixed_decimal_schema_1.pyx  fixed_schema_1.pyx  int_date_schema_1.pyx  long_time_micros_schema_1.pyx  map_schema_1.pyx  string_schema_1.pyx  union_schema_1.pyx  (+3 more)
cerializer_demo/: config.py  demo_client.py  demo_server.py  demo_student_schema.py
constants/: constants.py
examples/: avro_exaple.py  example_methods.pyx  fastavro_example.py
schemata/: array_schema.avsc  user_schema.avsc  yaml_schema.yaml
templates/: array.jinja2  map.jinja2  template.jinja2  union.jinja2
tests/: test_cerializer_compatibility.py
(+106 files in other folders)
