[tool.poetry]
name = "cerializer"
version = "1.0.3"
description = "Even faster alternative to FastAvro"
authors = ["matejmicek <35835815+matejmicek@users.noreply.github.com>"]
readme = "README.md"
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.9"
cython = "^3.0.0"
pyyaml = "^6.0.1"
setuptools = ">=46.0.0"
jinja2 = "^3.1.2"
pytz = "^2023.3"
requests = "^2.31.0"
tqdm = "^4.65.0"
fastavro = {version = "0.22.6", extras = ["demo"]}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
texttable = "^1.6.7"
fastavro = "<=0.22.6"
bottle = "^0.12.25"

[build-system]
requires = ["poetry-core", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
